--- a/index.css
+++ b/index.css
@@ -13,7 +13,7 @@ body {
     color: white;
     display: flex;
     justify-content: center;
-    height: 5vh;
+    height: 2vh;
     font-size: 7px;
     padding: 2px;
 }
@@ -38,8 +38,9 @@ body {
     list-style: none;
 }
 
-
-
+.slogan__logo {
+    display: none;
+}
 
 .nav__item--1,
 .nav__item--2 {
@@ -63,6 +64,7 @@ body {
 
 .text__slogan--2 {
     font-size: 17px;
+    margin-bottom: 15px;
 }
 
 .slogan__button {
@@ -98,7 +100,7 @@ body {
 
 
     .promo-message {
-        height: 8vh; 
+        height: 5vh; 
         font-size: 15px; 
     }
 
@@ -126,12 +128,23 @@ body {
         width: 50%;
     }
 
+    .slogan__logo {
+        display: block;
+    }
+
     .text__slogan--1 {
         font-size: 5vw;
     }
 
     .text__slogan--2 {
         font-size: 2vw;
+        margin-bottom: 10px;
+    }
+
+    .slogan__button,
+    .slogan__button--arrow {
+        display: flex;
+        align-items: center;
     }
 
     .product__image {
