adjusted nav items

--- a/index.css
+++ b/index.css
@@ -3,11 +3,6 @@ body {
     padding: 0;
 }
 
-/* nav {
-    position: fixed;
-    display: block;
-} */
-
 .promo-message {
     background-color: black;
     color: white;
@@ -30,11 +25,14 @@ body {
     margin-top: 5px;
 }
 
-.nav-1 {
+.nav {
     display: flex;
 }
 
 .nav__item {
+    display: flex;
+    justify-content: space-around;
+    align-items: end;
     list-style: none;
 }
 
@@ -44,11 +42,8 @@ body {
 
 .nav__item--1,
 .nav__item--2 {
-    display: flex;
     width: 22vw;
-    justify-content: space-between;
-    align-items: center;
-    font-size: 7px;
+    font-size: 5px;
 }
 
 /* Nav ends here */
@@ -88,9 +83,6 @@ body {
     display: none;
 }
 
-.divider {
-    width: 50%;
-}
 
 
 @media (min-width: 600px) {
